@@ -32,12 +32,6 @@ install_system()
 	fi
 
 	echo "[PRINT_LN] Selected distribution: $DISTRIB"
-	case "$DISTRIB" in
-	BackTrack)
-		echo "[PRINT_LN] This distribution does not support network installation!"
-		return 1
-	;;
-	esac
 
 	echo "[PRINT] Checking destination path ... "
 	if [ "$DEPLOY_TYPE" == "image" ]; then
@@ -120,16 +114,12 @@ install_system()
 	[ -z "$DEBOOTSTRAP_DIR" ] && DEBOOTSTRAP_DIR=$HOME_DIR/deploy/debootstrap
 	export DEBOOTSTRAP_DIR
 	debootstrap --no-check-gpg --arch $ARCH --foreign --extractor=ar --include=locales,openssh-server,sudo $SUITE $MNT_TARGET $MIRROR
-	if [ $? -ne 0 ]; then
-		echo "[PRINT_LN] FAIL to deploy!"; return 1
-	fi
+	[ $? -ne 0 ] && return 1
 	
 	echo "[PRINT_ALL] Preparing Linux system (second stage): "
 	unset DEBOOTSTRAP_DIR
 	chroot $MNT_TARGET /debootstrap/debootstrap --second-stage
-	if [ $? -ne 0 ]; then
-		echo "[PRINT_LN] FAIL to deploy!"; return 1
-	fi
+	[ $? -ne 0 ] && return 1
 	
 	configure_system
 	[ $? -ne 0 ] && return 1
@@ -149,20 +139,13 @@ configure_system()
 		[ -e "$MNT_TARGET/etc/apt/sources.list" ] && cp $MNT_TARGET/etc/apt/sources.list $MNT_TARGET/etc/apt/sources.list.bak
 		echo "# Generated by Linux Deploy" > $MNT_TARGET/etc/apt/sources.list
 		case "$DISTRIB" in
-		Debian)
+		debian)
 			echo "deb $MIRROR $SUITE main contrib non-free" >> $MNT_TARGET/etc/apt/sources.list
 			echo "deb-src $MIRROR $SUITE main contrib non-free" >> $MNT_TARGET/etc/apt/sources.list
 		;;
-		Ubuntu)
+		ubuntu)
 			echo "deb $MIRROR $SUITE main universe multiverse" >> $MNT_TARGET/etc/apt/sources.list
 			echo "deb-src $MIRROR $SUITE main universe multiverse" >> $MNT_TARGET/etc/apt/sources.list
-		;;
-		BackTrack)
-			echo "deb $MIRROR $SUITE main universe multiverse" >> $MNT_TARGET/etc/apt/sources.list
-			echo "deb-src $MIRROR $SUITE main universe multiverse" >> $MNT_TARGET/etc/apt/sources.list
-			echo "deb http://all.repository.backtrack-linux.org revolution main microverse non-free testing" >> $MNT_TARGET/etc/apt/sources.list
-			echo "deb http://source.repository.backtrack-linux.org revolution main microverse non-free testing" >> $MNT_TARGET/etc/apt/sources.list
-			echo "deb http://armel.repository.backtrack-linux.org revolution main microverse non-free testing" >> $MNT_TARGET/etc/apt/sources.list
 		;;
 		esac
 		chmod 644 $MNT_TARGET/etc/apt/sources.list
@@ -207,7 +190,7 @@ configure_system()
 	[ $? -eq 0 ] && echo "[RESULT_LN] done" || echo "[RESULT_LN] fail"
 	
 	echo "[PRINT] sftp-server ... "
-	if [ "$DISTRIB" == "Debian" ]; then
+	if [ "$DISTRIB" == "debian" ]; then
 		(set -e
 			cp $HOME_DIR/deploy/openssh/$ARCH/sftp-server $MNT_TARGET/usr/lib/openssh/sftp-server-fix
 			sed -i "s|^Subsystem sftp .*|Subsystem sftp /usr/lib/openssh/sftp-server-fix|g" $MNT_TARGET/etc/ssh/sshd_config
@@ -274,46 +257,43 @@ configure_system()
 		PROFILE_STR='PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
 		is_str=`cat $MNT_TARGET$USER_HOME/.profile | grep "$PROFILE_STR" || true`
 		[ -z "$is_str" ] && echo $PROFILE_STR >> $MNT_TARGET$USER_HOME/.profile
-		mkdir $MNT_TARGET$USER_HOME/.vnc || true
-		chmod 755 $MNT_TARGET$USER_HOME/.vnc
-		echo "MPTcXfgXGiY=" | base64 -d > $MNT_TARGET$USER_HOME/.vnc/passwd
-		chmod 600 $MNT_TARGET$USER_HOME/.vnc/passwd
-		echo 'XAUTHORITY=$HOME/.Xauthority' > $MNT_TARGET$USER_HOME/.vnc/xstartup
-		echo 'export XAUTHORITY' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-		case "$DESKTOP_ENV" in
-		XTerm)
-			echo 'xterm -max &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-		;;
-		LXDE)
-			echo 'startlxde &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-		;;
-		Xfce)
-			echo 'startxfce4 &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-		;;
-		GNOME)
-			echo 'XKL_XMODMAP_DISABLE=1' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-			echo 'export XKL_XMODMAP_DISABLE' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-			echo 'SESSION_SUPPORT=`gnome-session -h | grep "\-\-session"`' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-			echo 'if [ -n "$SESSION_SUPPORT" ]; then' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-			echo 'gnome-session --session=gnome &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-			echo 'else' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-			echo 'gnome-session &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-			echo 'fi' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-		;;
-		Unity)
-			echo 'gnome-session --session=ubuntu-2d &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-		;;
-		KDE)
-			echo 'startkde &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
-		;;
-		*)
-			echo "$DESKTOP_ENV not found!"
-		;;
-		esac
-		chmod 755 $MNT_TARGET$USER_HOME/.vnc/xstartup
-		echo "#!/bin/sh" > $MNT_TARGET$USER_HOME/.xsession
-		cat $MNT_TARGET$USER_HOME/.vnc/xstartup >> $MNT_TARGET$USER_HOME/.xsession
-		chmod 755 $MNT_TARGET$USER_HOME/.xsession
+		#is_gui=`echo $INSTALL_GUI | grep -i "^y" || true`
+		#if [ -n "$is_gui" ]; then
+			mkdir $MNT_TARGET$USER_HOME/.vnc || true
+			chmod 755 $MNT_TARGET$USER_HOME/.vnc
+			echo "MPTcXfgXGiY=" | base64 -d > $MNT_TARGET$USER_HOME/.vnc/passwd
+			chmod 600 $MNT_TARGET$USER_HOME/.vnc/passwd
+			echo 'XAUTHORITY=$HOME/.Xauthority' > $MNT_TARGET$USER_HOME/.vnc/xstartup
+			echo 'export XAUTHORITY' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+			case "$DESKTOP_ENV" in
+			XTerm)
+				echo 'xterm -max &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+			;;
+			LXDE)
+				echo 'startlxde &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+			;;
+			Xfce)
+				echo 'startxfce4 &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+			;;
+			GNOME)
+				echo 'XKL_XMODMAP_DISABLE=1' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+				echo 'export XKL_XMODMAP_DISABLE' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+				echo 'SESSION_SUPPORT=`gnome-session -h | grep "\-\-session"`' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+				echo 'if [ -n "$SESSION_SUPPORT" ]; then' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+				echo 'gnome-session --session=gnome &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+				echo 'else' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+				echo 'gnome-session &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+				echo 'fi' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+			;;
+			KDE)
+				echo 'startkde &' >> $MNT_TARGET$USER_HOME/.vnc/xstartup
+			;;
+			esac
+			chmod 755 $MNT_TARGET$USER_HOME/.vnc/xstartup
+			echo "#!/bin/sh" > $MNT_TARGET$USER_HOME/.xsession
+			cat $MNT_TARGET$USER_HOME/.vnc/xstartup >> $MNT_TARGET$USER_HOME/.xsession
+			chmod 755 $MNT_TARGET$USER_HOME/.xsession
+		#fi
 		chown -R $USER_ID:$GROUP_ID $MNT_TARGET$USER_HOME
 	exit 0)
 	[ $? -eq 0 ] && echo "[RESULT_LN] done" || echo "[RESULT_LN] fail"
@@ -337,22 +317,14 @@ configure_system()
 			GNOME)
 				PKGS="$PKGS gnome-core"
 			;;
-			Unity)
-				PKGS="$PKGS gnome-core unity-2d unity-common unity-lens-files unity-lens-applications unity-lens-music"
-			;;
 			KDE)
 				PKGS="$PKGS kde-standard"
-			;;
-			*)
-				echo "$DESKTOP_ENV not found!"
 			;;
 			esac
 			chroot $MNT_TARGET apt-get install $PKGS --no-install-recommends -yq
 			chroot $MNT_TARGET apt-get clean
 		exit 0)
-		if [ $? -ne 0 ]; then
-			echo "[PRINT_LN] FAIL to deploy!"; return 1
-		fi
+		[ $? -ne 0 ] && return 1
 	fi
 }
 
