@@ -12,7 +12,7 @@
     <string name="trace" translatable="false">false</string>
     <string name="logs" translatable="false">false</string>
     <string name="logfile" translatable="false">/mnt/sdcard/linuxdeploy.log</string>
-    <string name="distribution" translatable="false">Debian</string>
+    <string name="distribution" translatable="false">debian</string>
     <string name="suite" translatable="false">@string/debian_suite</string>
     <string name="mirror" translatable="false">@string/debian_mirror</string>
     <string name="architecture" translatable="false">@string/debian_architecture</string>
@@ -23,8 +23,8 @@
     <string name="username" translatable="false">android</string>
     <string name="serverdns" translatable="false"></string>
     <string name="locale" translatable="false">en_US.UTF-8</string>
-    <string name="installgui" translatable="false">false</string>
-    <string name="desktopenv" translatable="false">@string/debian_desktopenv</string>
+    <string name="installgui" translatable="false">true</string>
+    <string name="desktopenv" translatable="false">LXDE</string>
     <string name="customstartup" translatable="false">false</string>
     <string name="customscript" translatable="false">/etc/init.d/myscript</string>
     <string name="mountcustom" translatable="false">false</string>
@@ -44,18 +44,15 @@
     <string name="debian_suite" translatable="false">wheezy</string>
     <string name="debian_mirror" translatable="false">http://mirror.yandex.ru/debian</string>
     <string name="debian_architecture" translatable="false">armel</string>
-    <string name="debian_desktopenv" translatable="false">LXDE</string>
     
     <!-- Ubuntu -->
     <string name="ubuntu_suite" translatable="false">precise</string>
     <string name="ubuntu_mirror" translatable="false">http://ports.ubuntu.com</string>
     <string name="ubuntu_architecture" translatable="false">armel</string>
-    <string name="ubuntu_desktopenv" translatable="false">LXDE</string>
     
-    <!-- BackTrack -->
-    <string name="backtrack_suite" translatable="false">lucid</string>
-    <string name="backtrack_mirror" translatable="false">http://ports.ubuntu.com</string>
-    <string name="backtrack_architecture" translatable="false">armel</string>
-    <string name="backtrack_desktopenv" translatable="false">GNOME</string>
+    <!-- Arch Linux -->
+    <string name="archlinux_suite" translatable="false">rootfs</string>
+    <string name="archlinux_mirror" translatable="false">http://us.mirror.archlinuxarm.org/os/ArchLinuxARM-armv5te-latest.tar.gz</string>
+    <string name="archlinux_architecture" translatable="false">arm</string>
     
 </resources>
