@@ -2,8 +2,9 @@ Changelog (English)
 ===================
 
 1.3.0
-Added support BackTrack in configuration interface
+Added support Arch Linux installation
 Added automatic calculation of image size (90% of free space, but not more than 4095 MB)
+Interface improvements
 
 1.2.9
 Bugfix: sudo, upstart, gnome-session, XKL_XMODMAP_DISABLE
@@ -134,8 +135,9 @@ Updated list packages of base system installation
 ===========================
 
 1.3.0
-Добавлена поддержка BackTrack в интерфейсе конфигурации
+Добавлена ​​поддержка установки Arch Linux
 Добавлена функция автоматического расчета размера образа диска (90% от свободного пространства, но не больше 4095 МБ)
+Доработки интерфейса
 
 1.2.9
 Исправлены ошибки, связанные с sudo, upstart, gnome-session, XKL_XMODMAP_DISABLE
